<resources>
    <string name="app_name">Oprek</string>
    <string name="app_desc">Manage projects with no worries.</string>
    <string name="new_start">No data entries at the moment.</string>

    <!--  Screens label  -->
    <string name="label_register">Set up an account</string>
    <string name="detail_project">Detail project</string>
    <string name="add_project">Add new project</string>
    <string name="update_project">Update project</string>

    <!--  placeholders  -->
    <string name="pin_password">Pin password</string>
    <string name="pin_number">Pin number</string>
    <string name="email_address">Email address</string>
    <string name="username">Username</string>
    <string name="device_name">Device name</string>
    <string name="customer_name">Customer name</string>
    <string name="phone_number">Phone number</string>

    <!--  Titles  -->
    <string name="header_title">Income</string>
    <string name="recent_projects">Recent projects</string>
    <string name="set_pin_number">Set pin number</string>
    <string name="repeat_pin_number">Repeat pin number</string>
    <string name="regist_form_title1">User profile</string>
    <string name="regist_form_title2">Account information</string>
    <string name="add_project_subhead2">Customer information</string>

    <!--  Misc.  -->
    <string name="done">Done</string>
    <string name="pending">Pending</string>
    <string name="cancel">Cancel</string>
    <string name="progress">Progress</string>
    <string name="description">Description</string>
    <string name="update">Update</string>
    <string name="search">search</string>
    <string name="about">About</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="cost">Cost</string>
    <string name="due">Due date</string>
    <string name="status">Status</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="extra">Extra</string>
    <string name="save">Save</string>

    <!--  Menu tooltips  -->
    <string name="menu_edit">Edit project</string>
    <string name="menu_delete">Delete project</string>

    <!--  Dummy data  -->
    <string name="sample_device_name">Laptop Lenovo G450</string>
    <string name="sample_customer_name">Muhammad Ainul Yaqin</string>
    <string name="sample_description">Kerusakan LCD dan keyboard yang tidak terdetect oleh perangkat</string>
    <string name="sample_costs">Rp. 200.000</string>
    <string name="sample_due_date">Due date at 02 January</string>
    <string name="sample_customer_phone">+62 822 6485 4113</string>
    <string name="sample_income">Rp. 3,000,000</string>
    <string name="sample_user">Ainul</string>
    <string name="sample_lipsum">
        Lorem ipsum dolor sit amet consectetur adipisicing elit.
        Magnam sit distinctio, architecto dolorum earum repudiandae ex
        ullam maiores eius ducimus dolor nostrum id suscipit aperiam dicta
        quidem deserunt repellendus? Aut.

        Lorem ipsum dolor sit amet consectetur adipisicing elit.
        Magnam sit distinctio, architecto dolorum earum repudiandae ex
        ullam maiores eius ducimus dolor nostrum id suscipit aperiam dicta
        quidem deserunt repellendus? Aut.

        Lorem ipsum dolor sit amet consectetur adipisicing elit.
        Magnam sit distinctio, architecto dolorum earum repudiandae ex
        ullam maiores eius ducimus dolor nostrum id suscipit aperiam dicta
        quidem deserunt repellendus? Aut.

        Lorem ipsum dolor sit amet consectetur adipisicing elit.
        Magnam sit distinctio, architecto dolorum earum repudiandae ex
        ullam maiores eius ducimus dolor nostrum id suscipit aperiam dicta
        quidem deserunt repellendus? Aut.

        Lorem ipsum dolor sit amet consectetur adipisicing elit.
        Magnam sit distinctio, architecto dolorum earum repudiandae ex
        ullam maiores eius ducimus dolor nostrum id suscipit aperiam dicta
        quidem deserunt repellendus? Aut.

        Lorem ipsum dolor sit amet consectetur adipisicing elit.
        Magnam sit distinctio, architecto dolorum earum repudiandae ex
        ullam maiores eius ducimus dolor nostrum id suscipit aperiam dicta
        quidem deserunt repellendus? Aut.

        Lorem ipsum dolor sit amet consectetur adipisicing elit.
        Magnam sit distinctio, architecto dolorum earum repudiandae ex
        ullam maiores eius ducimus dolor nostrum id suscipit aperiam dicta
        quidem deserunt repellendus? Aut.

        Lorem ipsum dolor sit amet consectetur adipisicing elit.
        Magnam sit distinctio, architecto dolorum earum repudiandae ex
        ullam maiores eius ducimus dolor nostrum id suscipit aperiam dicta
        quidem deserunt repellendus? Aut.

        Lorem ipsum dolor sit amet consectetur adipisicing elit.
        Magnam sit distinctio, architecto dolorum earum repudiandae ex
        ullam maiores eius ducimus dolor nostrum id suscipit aperiam dicta
        quidem deserunt repellendus? Aut.

        Lorem ipsum dolor sit amet consectetur adipisicing elit.
        Magnam sit distinctio, architecto dolorum earum repudiandae ex
        ullam maiores eius ducimus dolor nostrum id suscipit aperiam dicta
        quidem deserunt repellendus? Aut.

        Lorem ipsum dolor sit amet consectetur adipisicing elit.
        Magnam sit distinctio, architecto dolorum earum repudiandae ex
        ullam maiores eius ducimus dolor nostrum id suscipit aperiam dicta
        quidem deserunt repellendus? Aut.

        Lorem ipsum dolor sit amet consectetur adipisicing elit.
        Magnam sit distinctio, architecto dolorum earum repudiandae ex
        ullam maiores eius ducimus dolor nostrum id suscipit aperiam dicta
        quidem deserunt repellendus? Aut.

        Lorem ipsum dolor sit amet consectetur adipisicing elit.
        Magnam sit distinctio, architecto dolorum earum repudiandae ex
        ullam maiores eius ducimus dolor nostrum id suscipit aperiam dicta
        quidem deserunt repellendus? Aut.

        Lorem ipsum dolor sit amet consectetur adipisicing elit.
        Magnam sit distinctio, architecto dolorum earum repudiandae ex
        ullam maiores eius ducimus dolor nostrum id suscipit aperiam dicta
        quidem deserunt repellendus? Aut.

        Lorem ipsum dolor sit amet consectetur adipisicing elit.
        Magnam sit distinctio, architecto dolorum earum repudiandae ex
        ullam maiores eius ducimus dolor nostrum id suscipit aperiam dicta
        quidem deserunt repellendus? Aut.
    </string>

    <!-- === DetailFragment === -->
    <string name="item_transition_name">item_%1$s</string>
    <string name="item_detail_transition_name">item_detail</string>
    <string name="log_out">Log out</string>
    <string name="add_form_title1">Device information</string>
    <!--  === DetailFragment::END ===  -->

    <!--  Choose image dialog  -->
    <string name="dialog_choose_image_title">Add an image</string>
    <string name="choose_image">Choose an image</string>
    <string name="take_photo">Take a photo</string>

    <!--  Update status dialog  -->
    <string name="dialog_title">Update status</string>
    <string name="img_none">Image not available</string>
    <string name="sample_company">CV. Jaya Abadi</string>
    <string name="company">Company</string>

    <!--  No project message  -->
    <string name="no_project_title">There is no project.</string>
    <string name="no_project_subtitle">Let\'s start to add some project!</string>
    <string name="profile">Profile</string>
    <string name="sample_email">ainul.y9b@gmail.com</string>
</resources>
