<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/dialog_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:theme="@style/Theme.MaterialComponents.Light"
    tools:layout_margin="@dimen/medium_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            style="@style/MaterialAlertDialog.MaterialComponents.Title.Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/medium_margin"
            android:text="@string/dialog_title" />

        <LinearLayout
            android:id="@+id/dialog_item_done"
            style="@style/selectable_item_layout"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_done"
                tools:ignore="contentDescription" />

            <TextView
                style="@style/TextAppearance.AppCompat.Button.selectableItemText"
                android:text="@string/done" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/dialog_item_cancel"
            style="@style/selectable_item_layout"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_cancel"
                tools:ignore="contentDescription" />

            <TextView
                style="@style/TextAppearance.AppCompat.Button.selectableItemText"
                android:text="@string/cancel" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/dialog_item_progress"
            style="@style/selectable_item_layout"
            android:layout_marginBottom="@dimen/medium_margin"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_progress"
                tools:ignore="contentDescription" />

            <TextView
                style="@style/TextAppearance.AppCompat.Button.selectableItemText"
                android:text="@string/progress" />
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>