<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="project"
            type="com.ainul.oprek.database.entities.Project" />

        <import type="com.ainul.oprek.util.Util" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="96dp"
        android:background="@drawable/background_border"
        android:padding="@dimen/medium_margin">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{project.deviceName}"
                android:textAppearance="@style/TextAppearance.AppCompat.Button.selectableItemText.bold"
                tools:text="@string/sample_device_name" />

            <TextView
                android:id="@+id/customer_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_margin"
                android:text="@{project.customerName}"
                tools:text="@string/sample_customer_name" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            app:formatPrice="@{project.cost}"
            android:textColor="@color/textGreen"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/sample_costs" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>