<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            style="@style/TextAppearance.AppCompat.Subhead"
            android:textColor="@color/colorBlack2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/projects"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <LinearLayout style="@style/section_container">

                <ImageView
                    style="@style/section_icon"
                    android:src="@drawable/ic_done"
                    app:tint="@color/colorGreen"
                    tools:ignore="ContentDescription" />

                <TextView
                    style="@style/section_title"
                    android:text="@string/done" />

                <TextView
                    style="@style/section_total_projects"
                    tools:text="3" />
            </LinearLayout>

            <LinearLayout
                style="@style/section_container"
                app:icon="@drawable/ic_done">

                <ImageView
                    style="@style/section_icon"
                    android:src="@drawable/ic_progress"
                    app:tint="@color/colorBlue"
                    tools:ignore="ContentDescription" />

                <TextView
                    style="@style/section_title"
                    android:text="@string/progress" />

                <TextView
                    style="@style/section_total_projects"
                    tools:text="2" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout style="@style/section_container">

                <ImageView
                    style="@style/section_icon"
                    android:src="@drawable/ic_pending"
                    app:tint="@color/colorYellow"
                    tools:ignore="ContentDescription" />

                <TextView
                    style="@style/section_title"
                    android:text="@string/pending" />

                <TextView
                    style="@style/section_total_projects"
                    tools:text="2" />
            </LinearLayout>

            <LinearLayout style="@style/section_container">

                <ImageView
                    style="@style/section_icon"
                    android:src="@drawable/ic_cancel"
                    app:tint="@color/colorRed"
                    tools:ignore="ContentDescription" />

                <TextView
                    style="@style/section_title"
                    android:text="@string/cancel" />

                <TextView
                    style="@style/section_total_projects"
                    tools:text="2" />
            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/colorGray" />
    </LinearLayout>
</layout>