<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="project"
            type="com.ainul.oprek.database.entities.Project" />
    </data>

    <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/main_information_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/medium_margin">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:background="@drawable/background_gray"
                android:gravity="center"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:src="@drawable/ic_outline_image_24"
                    tools:ignore="contentDescription" />

                <TextView
                    style="@style/TextAppearance.AppCompat.Subhead"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/medium_margin"
                    android:text="@string/img_none" />
            </LinearLayout>

            <ImageView
                android:id="@+id/cover_image"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:scaleType="centerCrop"
                app:imagePath="@{project.deviceImage}"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="contentDescription" />

            <TextView
                android:id="@+id/device_name"
                style="@style/MaterialAlertDialog.MaterialComponents.Title.Text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/medium_margin"
                android:layout_marginTop="@dimen/medium_margin"
                android:text="@{project.deviceName}"
                android:textColor="@color/colorBlack2"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cover_image"
                tools:text="@string/sample_device_name" />

            <include
                layout="@layout/status_tag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/medium_margin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/device_name"
                app:status="@{project.status}" />

            <TextView
                android:id="@+id/customer_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin"
                android:text="@{project.customerName}"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/device_name"
                app:layout_constraintTop_toBottomOf="@id/device_name"
                tools:text="@string/sample_customer_name" />

            <View
                android:id="@+id/divider1"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="@dimen/medium_margin"
                android:layout_marginTop="@dimen/medium_margin"
                android:layout_marginEnd="@dimen/medium_margin"
                android:background="@color/colorGray"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/customer_name" />

            <LinearLayout
                android:id="@+id/cost_section"
                style="@style/info_section_container"
                android:layout_width="match_parent"
                app:layout_constraintTop_toBottomOf="@id/divider1"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="@dimen/small_icon_size"
                    android:layout_height="@dimen/small_icon_size"
                    android:src="@drawable/ic_money"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/cost"
                    style="@style/section_text"
                    app:formatPrice="@{project.cost}"
                    tools:text="@string/sample_costs" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/phone_section"
                style="@style/info_section_container"
                android:layout_width="match_parent"
                app:layout_constraintTop_toBottomOf="@id/cost_section"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="@dimen/small_icon_size"
                    android:layout_height="@dimen/small_icon_size"
                    android:src="@drawable/ic_phone"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/phone"
                    style="@style/section_text"
                    android:text="@{project.phoneNumber}"
                    tools:text="@string/sample_customer_phone" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/due_section"
                style="@style/info_section_container"
                android:layout_width="match_parent"
                app:layout_constraintTop_toBottomOf="@id/phone_section"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="@dimen/small_icon_size"
                    android:layout_height="@dimen/small_icon_size"
                    android:src="@drawable/ic_clock_alt"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/due"
                    style="@style/section_text"
                    android:text="@{project.dueDate}"
                    tools:text="@string/sample_due_date" />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</layout>